--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,20 @@
-node_modules
-dist
-out
+# Ignore Vite/Electron output folders
+dist/
+dist-electron/
+build/
+out/
+
+# Ignore source maps
+*.map
+
+# Ignore Node modules and logs
+node_modules/
+*.log
+
+# Ignore OS-specific files
 .DS_Store
-.eslintcache
-*.log*
+Thumbs.db
 
-
+# Ignore environment files
 .env
-.env-example
-.db.ts
+.env.*.local
