--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^4.0.0",
+    "@fontsource/inter": "^5.2.5",
     "clsx": "^2.1.1",
     "electron-updater": "^6.3.9"
   },
